Details
-
Bug
-
Status: Resolved
-
Blocker
-
Resolution: Fixed
-
Impala 4.3.0
-
None
-
ghx-label-5
Description
Redhat 9 and Ubuntu 22 switched to cgroups v2, which has a different hierarchy than cgroups v1. On startup, we get this error message:
I0615 03:42:54.895839 2633432 status.cc:129] Error reading /proc/self/cgroup: Error(2): No such file or directory @ 0xfc6233 impala::Status::Status() @ 0x17ab766 impala::CGroupUtil::FindGlobalCGroup() @ 0x17acdb2 impala::CGroupUtil::FindAbsCGroupPath() @ 0x17ad065 impala::CGroupUtil::FindCGroupMemLimit() @ 0x17ad7e8 _ZN6impala10CGroupUtil11DebugStringB5cxx11Ev @ 0xfa9ce3 impala::InitCommonRuntime() @ 0x15978ed ImpaladMain() @ 0xe977dc main @ 0x7fada4963d90 (unknown) @ 0x7fada4963e40 __libc_start_main @ 0xe97635 _start I0615 03:42:54.895812 2633432 init.cc:536] Process CGroup Info: memory.limit_in_bytes=Error reading /proc/self/cgroup: Error(2): No such file or directory
The detection of container memory limits will be ineffective until this is fixed.
This also causes a backend test failure:
/home/ubuntu/Impala/be/src/util/proc-info-test.cc:38 Value of: status_.ok() Actual: false Expected: true Error: Error reading /proc/self/cgroup: Error(25): Inappropriate ioctl for device
Attachments
Issue Links
- causes
-
IMPALA-12244 CGroupInfo.ErrorHandling test failed in impala-asf-master-core-asan
- Resolved